Bug 939088 - Add a cache for fetching the names associated with ALIASEDVAR operations, r=luke.